platform-app/infra/k8s/istio/virtual-services/dev/argocd-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-routing
  namespace: itsm-dev
spec:
  hosts:
    - "argocd.dev.local"
  gateways:
    - itsm-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
